package model;

public interface Publicavel
{
    void publicar();
}
